[package]
name = "clean_dowman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
winreg = "0.52"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
